# gtest-helloworld

./: CMakeLists.txt  Dockerfile  README.md  makefile
src/: main.cpp
